# libG

./: CMakeLists.txt  README.md  conanfile.py
include/libG/: libG.h
src/: libG.cpp
